# clinfo

./: .gitignore  CMakeLists.txt  Makefile.win  README.md
src/: clinfo.c
